Styles poster (known issue with | in brands section on Safari)

--- a/style/app.css
+++ b/style/app.css
@@ -778,7 +778,8 @@ button {
   opacity: 1;
 }
 
-.marker[data-label-index="0"] {
+.marker[data-label-index="0"],
+.atelie .marker {
   width: 1.2rem;
   min-width: 1.2rem;
   height: 1.2rem;
@@ -1349,16 +1350,141 @@ input[type="checkbox"]:checked + div .switch::before {
   position: absolute;
   top: -9999px;
   left: 0;
-  width: calc( 720px * 2 );
-  height: 1080px;
+  width: 720px;
+  height: calc( 1080px * 2 );
   background: var(--dark-100);
   z-index: 999;
 }
 
-.atelie > * {
+.atelie .poster-html,
+.atelie canvas, {
   position: relative;
   width: 720px;
+  max-width: 720px;
   height: 1080px;
+}
+
+.atelie .poster-html {
+  background: var(--dark-100);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-family: Piaui;
+  font-size: 26px;
+  font-variant: normal;
+}
+
+.atelie .poster-html img {
+  align-self: center;
+}
+
+.poster-location {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 40px;
+  width: 720px;
+  height: 220px;
+}
+
+.poster-location h1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  font-size: 48px;
+}
+
+.poster-location h1 span {
+  color: var(--highlight)
+}
+
+.atelie .poster-figure {
+  position: relative;
+  width: 640px;
+  height: 640px;
+  max-width: 100%;
+  padding: 0;
+}
+
+.atelie .poster-figure > img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  border-radius: 320px;
+}
+
+.atelie .poster-figure figcaption {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+}
+
+.atelie .poster-figure figcaption p {
+  display: flex;
+  margin: 0;
+}
+
+.atelie .poster-figure figcaption p:first-child {
+  color: var(--highlight);
+}
+
+.atelie .poster-figure figcaption p:first-child img {
+  margin-right: 16px
+}
+
+.atelie .poster-figure .marker {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate( -50%, -50% );
+  z-index: 3;
+}
+
+.poster-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 40px 20px;
+  width: 720px;
+  height: 220px;
+}
+
+.poster-content > p {
+  width: 560px;
+  text-align: center;
+}
+
+.poster-content strong {
+  color: var(--light-100);
+}
+
+.poster-content .poster-brands {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.poster .brands {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+}
+
+.poster .brands > img:last-child {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .atelie canvas {
